--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,7 +41,10 @@
       <h2 class="footer-links-heading">Connect</h2>
       <ul class="usa-unstyled-list">
         <li>
-          <a href="{{ site.baseurl }}/contact/">Opportunities</a>
+          <a href="{{ site.baseurl }}/contact/">Contact</a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/opps/">Opportunities</a>
         </li>
         <li>
           <a href="{{ site.baseurl }}/events/">Events</a>
