update toolkits homepage

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -7,12 +7,123 @@ layout: base
     <h1>{{ page.title }}</h1>
   </div>
 </div>
-<section class="usa-section background-tint" style="padding-top: 2rem;">
+<section class="usa-section background-tint" style="padding-top: 2rem;">  
   <div class="usa-grid">
     <p class="billboard-message-toolkits">
-  The following resources are designed for Evaluation Officers and related staff
-  to support implementation of the Evidence Act.
+      Toolkits now available!
     </p>
+    <p class="billboard-message-toolkits">
+      Additional documents coming soon 
+    </p>
+    <p>
+      OES is providing government-wide resources and implementation support around evidence-building activities and evaluation, in support of the Foundations for Evidence-Based Policymaking Act of 2018 (“Evidence Act”). The Evidence Act requires agencies to undertake a number of activities related to building and using evidence including the establishment of an Evaluation Officer (EO) position, the development of multi-year Learning Agendas, the development of Annual Evaluation Plans, and the completion of the Capacity Assessment. In addition to improving how agencies use evidence, the implementation of the Evidence Act offers an opportunity to better align performance, budget, strategic planning, policymaking, data, and evidence-building activities across the Federal government.
+    </p>
+    <p>
+      In FY19, OES created materials specifically for use by Evaluation Officers and their staff as they onboard, stand up their teams, work across their agencies to engage stakeholders, and begin to implement Evidence Act requirements. These toolkits on Learning Agendas, Annual Evaluation Plans and the Capacity Assessment, published in early 2020, are intended as resources to help agencies learn from leading practices across government to build a culture and an infrastructure for continuous learning and improvement.  
+    </p>
+    <br />
+    <article class="card usa-width-one-third" style="height: 80vh;">     
+      <div class="card-image" style="background-image: url({{site.baseurl}}/assets/toolkits/learning_agenda_bg.jpg);">
+      </div>
+      <div class="card-banner">
+        <h3 class="card-description" style="color: #03cab9; text-align: center;">
+          <span>Learning Agenda Toolkit</span>
+        </h3>
+        <p class="card-summary">
+          <ul>
+            <li>Guide to Developing Your Agency’s Learning Agenda</li>
+            <li>Learning Agenda Workbook</li>
+            <ul>
+              <li>Activity 2 Supplement</li>
+              <li>Activity 3 Supplement</li>
+            </ul>
+            <li>Overview of Learning Agendas</li>
+            <li>Learning Agenda Section Sample</li>
+          </ul>
+        </p>
+      </div>
+    </article>
+    <article class="card usa-width-one-third" style="height: 80vh;">
+      <div class="card-image" style="background-image: url({{site.baseurl}}/assets/toolkits/annual_eval_bg.jpg);">
+      </div>
+      <div class="card-banner">
+        <h3 class="card-description" style="color: #2e9ac4; text-align: center;">
+          <span>Annual Evaluation Plan Toolkit</span>
+        </h3>
+        <p class="card-summary">
+          <ul>
+            <li>Guide to Developing Your Agency’s Annual Evaluation Plan</li>
+            <li>Evaluation Planning Tips</li>
+            <li>Annual Evaluation Plan Workbook</li>
+            <li>Overview of Annual Evaluation Plans</li>
+            <li>Sample Evaluation Summary</li>
+          </ul>
+        </p>
+      </div>
+    </article>
+    <article class="card usa-width-one-third" style="height: 80vh;">
+      <div class="card-image" style="background-image: url({{site.baseurl}}/assets/toolkits/coming_soon_bg.jpg);">
+      </div>
+      <div class="card-banner">
+        <h3 class="card-description" style="color: #fa5646; text-align: center;">
+          <span>[Coming Soon] Capacity Assesment Toolkit</span>
+        </h3>
+        <p class="card-summary">
+          <ul>
+            <li>Capacity Assessment Tips</li>
+            <li>Overview of Capacity Assessments</li>
+          </ul>
+        </p>
+      </div>
+    </article>
+  </div>
+  <br />
+  <div class="usa-grid">
+    <div class="usa-width-one-fourth">
+      <a class="usa-width-one-fourth usa-button usa-button--secondary" style="width: 100%;" href="../assets/toolkits/evidence_act_overview.pdf">
+        <div class="usa-width-one-fourth">
+          <span class="download-button-icon"></span>
+        </div>
+        <div class="usa-width-three-fourths">
+          <span>Evidence Act Phase 1 Overview</span>
+        </div>
+      </a>
+    </div>
+    <div class="usa-width-one-fourth">
+      <a class="usa-width-one-fourth usa-button usa-button--secondary" style="width: 100%;">
+        <div class="usa-width-one-fourth">
+          <span class="download-button-icon"></span>
+        </div>
+        <div class="usa-width-three-fourths">
+          <span>Toolkit <br />Master Checklist</span>
+        </div>
+      </a>
+    </div>
+    <div class="usa-width-one-fourth">
+      <a class="usa-width-one-fourth usa-button usa-button--secondary" style="width: 100%;">
+        <div>
+          <div class="usa-width-one-fourth">
+            <span class="download-button-icon"></span>
+          </div>
+          <div class="usa-width-three-fourths">
+            <span>Guide to Engaging Sub-Agencies</span>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="usa-width-one-fourth">
+      <a class="usa-width-one-fourth usa-button usa-button--secondary" style="width: 100%;"  href="../assets/toolkits/reference_sheet.pdf">
+        <div class="usa-width-one-fourth">
+          <span class="download-button-icon"></span>
+        </div>
+        <div class="usa-width-three-fourths">
+          <span>Quick Reference Sheet</span>
+        </div>
+      </a>
+    </div>
+  </div>
+  
+  {% comment %}     
   <div align="center">
   </div>
   <div class="toolkits-div">
@@ -38,4 +149,5 @@ layout: base
       <td class="table-border"> Engaging Sub-Agencies in Evidence Act Implementation </td>
     </tr>
   </table>
+  {% endcomment %}
 </section>
