--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,26 +1,31 @@
 // Custom styles --------- //
 .usa-nav-primary {
-    button[aria-expanded=true] {
-        background-color: $color-primary-darker;
+  button[aria-expanded='true'] {
+    background-color: $color-primary-darker;
 
-        span {
-            border-bottom-color: $oem-green;
-        }
-
-        &:hover {
-            background-color: $color-primary-darker;
-
-            span {
-                color: #fff;
-            }
-        }
+    span {
+      border-bottom-color: $oem-green;
     }
 
-    .usa-nav-submenu {
-        background-color: $color-primary-darker;
+    &:hover {
+      background-color: $color-primary-darker;
 
-        a:hover {
-            background-color: $oem-green;
-        }
+      span {
+        color: #fff;
+      }
     }
+  }
+
+  .usa-nav-submenu {
+    background-color: $color-primary-darker;
+
+    a:hover {
+      background-color: $oem-green;
+    }
+  }
+}
+
+.download-button-icon:before {
+  content: url(../toolkits/download_icon_blue.jpg);
+  vertical-align: middle;
 }
