update toolkit homepage layout

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -9,7 +9,7 @@ layout: base
 </div>
 <section class="usa-section background-tint" style="padding-top: 2rem;">  
   <div class="usa-grid">
-    <p class="billboard-message-toolkits">
+    <p class="billboard-message-toolkits" style="font-size: 42px;">
       Toolkits now available!
     </p>
     <p class="billboard-message-toolkits">
@@ -22,11 +22,12 @@ layout: base
       In FY19, OES created materials specifically for use by Evaluation Officers and their staff as they onboard, stand up their teams, work across their agencies to engage stakeholders, and begin to implement Evidence Act requirements. These toolkits on Learning Agendas, Annual Evaluation Plans and the Capacity Assessment, published in early 2020, are intended as resources to help agencies learn from leading practices across government to build a culture and an infrastructure for continuous learning and improvement.  
     </p>
     <br />
-    <article class="card usa-width-one-third" style="height: 80vh;">     
-      <div class="card-image" style="background-image: url({{site.baseurl}}/assets/toolkits/learning_agenda_bg.jpg);">
+    <article class="card-toolkit usa-width-one-third">     
+      <div class="card-image" style="text-align: center; background-color: #76CBCA;">
+        <img src="../assets/toolkits/learning_agenda_bg_hq_w.png" style="max-height: 200px;">
       </div>
       <div class="card-banner">
-        <h3 class="card-description" style="color: #03cab9; text-align: center;">
+        <h3 class="card-description" style="color: #76CBCA; text-align: center;">
           <span>Learning Agenda Toolkit</span>
         </h3>
         <p class="card-summary">
@@ -43,11 +44,12 @@ layout: base
         </p>
       </div>
     </article>
-    <article class="card usa-width-one-third" style="height: 80vh;">
-      <div class="card-image" style="background-image: url({{site.baseurl}}/assets/toolkits/annual_eval_bg.jpg);">
+    <article class="card-toolkit usa-width-one-third">
+      <div class="card-image" style="text-align: center; background-color: #7AC0D9;">
+        <img src="../assets/toolkits/annual_eval_bg_hq_w.png" style="max-height: 200px;">
       </div>
       <div class="card-banner">
-        <h3 class="card-description" style="color: #2e9ac4; text-align: center;">
+        <h3 class="card-description" style="color: #7AC0D9; text-align: center;">
           <span>Annual Evaluation Plan Toolkit</span>
         </h3>
         <p class="card-summary">
@@ -61,11 +63,12 @@ layout: base
         </p>
       </div>
     </article>
-    <article class="card usa-width-one-third" style="height: 80vh;">
-      <div class="card-image" style="background-image: url({{site.baseurl}}/assets/toolkits/coming_soon_bg.jpg);">
+    <article class="card-toolkit usa-width-one-third">
+      <div class="card-image" style="text-align: center; background-color: #FC9A8F;">
+        <img src="../assets/toolkits/coming_soon_bg_hq_w.png" style="max-height: 200px;">
       </div>
       <div class="card-banner">
-        <h3 class="card-description" style="color: #fa5646; text-align: center;">
+        <h3 class="card-description" style="color: #FC9A8F; text-align: center;">
           <span>[Coming Soon] Capacity Assesment Toolkit</span>
         </h3>
         <p class="card-summary">
@@ -80,44 +83,50 @@ layout: base
   <br />
   <div class="usa-grid">
     <div class="usa-width-one-fourth">
-      <a class="usa-width-one-fourth usa-button usa-button--secondary" style="width: 100%;" href="../assets/toolkits/evidence_act_overview.pdf">
-        <div class="usa-width-one-fourth">
-          <span class="download-button-icon"></span>
-        </div>
-        <div class="usa-width-three-fourths">
-          <span>Evidence Act Phase 1 Overview</span>
-        </div>
-      </a>
-    </div>
-    <div class="usa-width-one-fourth">
-      <a class="usa-width-one-fourth usa-button usa-button--secondary" style="width: 100%;">
-        <div class="usa-width-one-fourth">
-          <span class="download-button-icon"></span>
-        </div>
-        <div class="usa-width-three-fourths">
-          <span>Toolkit <br />Master Checklist</span>
-        </div>
-      </a>
-    </div>
-    <div class="usa-width-one-fourth">
-      <a class="usa-width-one-fourth usa-button usa-button--secondary" style="width: 100%;">
+      <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" href="../assets/toolkits/evidence_act_overview.pdf" target="_blank">
         <div>
-          <div class="usa-width-one-fourth">
+          <div>
             <span class="download-button-icon"></span>
           </div>
-          <div class="usa-width-three-fourths">
-            <span>Guide to Engaging Sub-Agencies</span>
+          <div>
+            <span>Evidence Act Phase 1 Overview</span>
           </div>
         </div>
       </a>
     </div>
     <div class="usa-width-one-fourth">
-      <a class="usa-width-one-fourth usa-button usa-button--secondary" style="width: 100%;"  href="../assets/toolkits/reference_sheet.pdf">
-        <div class="usa-width-one-fourth">
-          <span class="download-button-icon"></span>
+      <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" target="_blank">
+        <div>
+          <div>
+            <span class="download-button-icon"></span>
+          </div>
+          <div>
+            <span>Toolkit Master Checklist</span>
+          </div>
         </div>
-        <div class="usa-width-three-fourths">
-          <span>Quick Reference Sheet</span>
+      </a>
+    </div>
+    <div class="usa-width-one-fourth">
+      <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" target="_blank">
+        <div>
+          <div>
+            <span class="download-button-icon"></span>
+          </div>
+          <div>
+            <span>Engaging Bureaus or Sub-Agencies</span>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="usa-width-one-fourth">
+      <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;"  href="../assets/toolkits/reference_sheet.pdf" target="_blank">
+        <div>
+          <div>
+            <span class="download-button-icon"></span>
+          </div>
+          <div>
+            <span>Quick Reference Sheet</span>
+          </div>
         </div>
       </a>
     </div>
