--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -27,5 +27,6 @@
 
 .download-button-icon:before {
   content: url(../toolkits/download_icon_blue.jpg);
+  width: 40px;
   vertical-align: middle;
 }
