adjust line item spacing

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -31,15 +31,15 @@ layout: base
           <span>Learning Agenda Toolkit</span>
         </h3>
         <p class="card-summary">
-          <ul>
-            <li>Guide to Developing Your Agency’s Learning Agenda</li>
-            <li>Learning Agenda Workbook</li>
-            <ul>
-              <li>Activity 2 Supplement</li>
-              <li>Activity 3 Supplement</li>
+          <ul style="line-height: 25px;">
+            <li style="line-height: 25px;">Guide to Developing Your Agency’s Learning Agenda</li>
+            <li style="line-height: 25px;">Learning Agenda Workbook</li>
+            <ul style="line-height: 25px;">
+              <li style="line-height: 25px;">Activity 2 Supplement</li>
+              <li style="line-height: 25px;">Activity 3 Supplement</li>
             </ul>
-            <li>Overview of Learning Agendas</li>
-            <li>Learning Agenda Section Sample</li>
+            <li style="line-height: 25px;">Overview of Learning Agendas</li>
+            <li style="line-height: 25px;">Learning Agenda Section Sample</li>
           </ul>
         </p>
       </div>
@@ -53,12 +53,12 @@ layout: base
           <span>Annual Evaluation Plan Toolkit</span>
         </h3>
         <p class="card-summary">
-          <ul>
-            <li>Guide to Developing Your Agency’s Annual Evaluation Plan</li>
-            <li>Evaluation Planning Tips</li>
-            <li>Annual Evaluation Plan Workbook</li>
-            <li>Overview of Annual Evaluation Plans</li>
-            <li>Sample Evaluation Summary</li>
+          <ul style="line-height: 25px;">
+            <li style="line-height: 25px;">Guide to Developing Your Agency’s Annual Evaluation Plan</li>
+            <li style="line-height: 25px;">Evaluation Planning Tips</li>
+            <li style="line-height: 25px;">Annual Evaluation Plan Workbook</li>
+            <li style="line-height: 25px;">Overview of Annual Evaluation Plans</li>
+            <li style="line-height: 25px;">Sample Evaluation Summary</li>
           </ul>
         </p>
       </div>
@@ -72,9 +72,9 @@ layout: base
           <span>[Coming Soon] Capacity Assesment Toolkit</span>
         </h3>
         <p class="card-summary">
-          <ul>
-            <li>Capacity Assessment Tips</li>
-            <li>Overview of Capacity Assessments</li>
+          <ul style="line-height: 25px;">
+            <li style="line-height: 25px;">Capacity Assessment Tips</li>
+            <li style="line-height: 25px;">Overview of Capacity Assessments</li>
           </ul>
         </p>
       </div>
