--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -26,7 +26,7 @@
 }
 
 .download-button-icon:before {
-  content: url(../toolkits/download_icon_blue.jpg);
+  content: url(../toolkits/download_icon_blue_hq.png);
   width: 40px;
   vertical-align: middle;
 }
