--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -32,14 +32,26 @@ layout: base
         </h3>
         <p class="card-summary">
           <ul style="line-height: 25px;">
-            <li style="line-height: 25px;">Guide to Developing Your Agency’s Learning Agenda</li>
-            <li style="line-height: 25px;">Learning Agenda Workbook</li>
+            <li style="line-height: 25px;">
+              <a href="../assets/toolkits/A_Guide_to_Developing_your_Agency's_Learning_Agenda.pdf" target="_blank">Guide to Developing Your Agency’s Learning Agenda</a>
+            </li>
+            <li style="line-height: 25px;">
+              <a href="../assets/toolkits/Learning_Agenda_Workbook.docx" target="_blank">Learning Agenda Workbook</a>
+            </li>
             <ul style="line-height: 25px;">
-              <li style="line-height: 25px;">Activity 2 Supplement</li>
-              <li style="line-height: 25px;">Activity 3 Supplement</li>
+              <li style="line-height: 25px;">
+                <a href="../assets/toolkits/Activity_2_Supplement_FINAL.xlsx" target="_blank">Activity 2 Supplement</a>
+              </li>
+              <li style="line-height: 25px;">
+                <a href="../assets/toolkits/Activity_3_Supplement_FINAL.pptx" target="_blank">Activity 3 Supplement</a>
+              </li>
             </ul>
-            <li style="line-height: 25px;">Overview of Learning Agendas</li>
-            <li style="line-height: 25px;">Learning Agenda Section Sample</li>
+            <li style="line-height: 25px;">
+              <a href="../assets/toolkits/Learning_Agenda_Overview.pdf" target="_blank">Overview of Learning Agendas</a>
+            </li>
+            <li style="line-height: 25px;">
+              <a href="../assets/toolkits/Sample_Learning_Agenda_Section.pdf" target="_blank">Learning Agenda Section Sample</a>
+            </li>
           </ul>
         </p>
       </div>
@@ -54,11 +66,19 @@ layout: base
         </h3>
         <p class="card-summary">
           <ul style="line-height: 25px;">
-            <li style="line-height: 25px;">Guide to Developing Your Agency’s Annual Evaluation Plan</li>
+            <li style="line-height: 25px;">
+              <a href="../assets/toolkits/A_Guide_to_Developing_your_Agency's_Annual_Evaluation_Plan.pdf" target="_blank">Guide to Developing Your Agency’s Annual Evaluation Plan</a>
+            </li>
             <li style="line-height: 25px;">Evaluation Planning Tips</li>
-            <li style="line-height: 25px;">Annual Evaluation Plan Workbook</li>
-            <li style="line-height: 25px;">Overview of Annual Evaluation Plans</li>
-            <li style="line-height: 25px;">Sample Evaluation Summary</li>
+            <li style="line-height: 25px;">
+              <a href="../assets/toolkits/Annual_Evaluation_Plan_Workbook.docx" target="_blank">Annual Evaluation Plan Workbook</a>
+            </li>
+            <li style="line-height: 25px;">
+              <a href="../assets/toolkits/Annual_Evaluation_Plan_Overview.pdf" target="_blank">Overview of Annual Evaluation Plans</a>
+            </li>
+            <li style="line-height: 25px;">
+              <a href="../assets/toolkits/Sample_Evaluation_Description.pdf" target="_blank">Sample Evaluation Summary</a>
+            </li>
           </ul>
         </p>
       </div>
