adjust toolkit card spacing

--- a/_sass/components/toolkits.scss
+++ b/_sass/components/toolkits.scss
@@ -143,6 +143,7 @@ table {
   @include media(1055px) {
     display: flex;
     flex-direction: column;
+    margin-left: 5px;
     margin-right: 2.3%;
     height: auto;
     min-height: 720px;
