--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -10,10 +10,7 @@ layout: base
 <section class="usa-section background-tint" style="padding-top: 2rem;">  
   <div class="usa-grid">
     <p class="billboard-message-toolkits" style="font-size: 42px;">
-      Toolkits now available!
-    </p>
-    <p class="billboard-message-toolkits">
-      Additional documents coming soon 
+      Resources to Help Federal Agencies Implement the Evidence Act
     </p>
     <p>
       OES is providing government-wide resources and implementation support around evidence-building activities and evaluation, in support of the Foundations for Evidence-Based Policymaking Act of 2018 (“Evidence Act”). The Evidence Act requires agencies to undertake a number of activities related to building and using evidence including the establishment of an Evaluation Officer (EO) position, the development of multi-year Learning Agendas, the development of Annual Evaluation Plans, and the completion of the Capacity Assessment. In addition to improving how agencies use evidence, the implementation of the Evidence Act offers an opportunity to better align performance, budget, strategic planning, policymaking, data, and evidence-building activities across the Federal government.
