update list item text

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -66,7 +66,7 @@ layout: base
             <li style="line-height: 25px;">
               <a href="../assets/toolkits/A_Guide_to_Developing_your_Agency's_Annual_Evaluation_Plan.pdf" target="_blank">Guide to Developing Your Agency’s Annual Evaluation Plan</a>
             </li>
-            <li style="line-height: 25px;">Evaluation Planning Tips</li>
+            <li style="line-height: 25px;">[Coming Soon] Evaluation Planning Tips</li>
             <li style="line-height: 25px;">
               <a href="../assets/toolkits/Annual_Evaluation_Plan_Workbook.docx" target="_blank">Annual Evaluation Plan Workbook</a>
             </li>
