update layout and images

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -13,105 +13,108 @@ layout: base
       Resources to Help Federal Agencies Implement the Evidence Act
     </p>
     <p>
-      OES is providing government-wide resources and implementation support around evidence-building activities and evaluation, in support of the Foundations for Evidence-Based Policymaking Act of 2018 (“Evidence Act”). The Evidence Act requires agencies to undertake a number of activities related to building and using evidence including the establishment of an Evaluation Officer (EO) position, the development of multi-year Learning Agendas, the development of Annual Evaluation Plans, and the completion of the Capacity Assessment. In addition to improving how agencies use evidence, the implementation of the Evidence Act offers an opportunity to better align performance, budget, strategic planning, policymaking, data, and evidence-building activities across the Federal government.
+      The Foundations for Evidence-Based Policymaking Act of 2018 (“Evidence Act”) requires Federal agencies to undertake a number of activities to build and use evidence. These include establishing an Evaluation Officer (EO) position, developing a multi-year learning agenda and an Annual Evaluation Plan, and completing a capacity assessment. Implementation of the Evidence Act offers an opportunity to improve how agencies plan to build and use evidence, and can better align performance, budget, strategic planning, policymaking, data, and evidence-building activities across the Federal government.
     </p>
     <p>
-      In FY19, OES created materials specifically for use by Evaluation Officers and their staff as they onboard, stand up their teams, work across their agencies to engage stakeholders, and begin to implement Evidence Act requirements. These toolkits on Learning Agendas, Annual Evaluation Plans and the Capacity Assessment, published in early 2020, are intended as resources to help agencies learn from leading practices across government to build a culture and an infrastructure for continuous learning and improvement.  
+      OES has developed resources to support EOs and their staff as they engage stakeholders, help define priority questions, and plan evaluations and evidence-building activities. These toolkits on learning agendas, Annual Evaluation Plans and the capacity assessment, published in early 2020, are intended as resources to help agencies learn from leading practices and case studies to build a culture and infrastructure for continuous learning and improvement. We hope these publicly available materials will be helpful as EOs, their staff, and others across government complete this important work.
     </p>
     <br />
     <article class="card-toolkit usa-width-one-third">     
-      <div class="card-image" style="text-align: center; background-color: #76CBCA;">
+      <div class="card-image" style="text-align: center; background-color: #2CBEB3;">
         <img src="../assets/toolkits/learning_agenda_bg_hq_w.png" style="max-height: 200px;">
       </div>
       <div class="card-banner">
-        <h3 class="card-description" style="color: #76CBCA; text-align: center;">
+        <h3 class="card-description" style="color: #2CBEB3; text-align: center;">
           <span>Learning Agenda Toolkit</span>
         </h3>
         <p class="card-summary">
           <ul style="line-height: 25px;">
             <li style="line-height: 25px;">
-              <a href="../assets/toolkits/A_Guide_to_Developing_your_Agency's_Learning_Agenda.pdf" target="_blank">Guide to Developing Your Agency’s Learning Agenda</a>
+              <a href="../assets/toolkits/Learning_Agenda_Overview.pdf" target="_blank">Learning Agenda Overview (110 KB)</a>
             </li>
             <li style="line-height: 25px;">
-              <a href="../assets/toolkits/Learning_Agenda_Workbook.docx" target="_blank">Learning Agenda Workbook</a>
+              <a href="../assets/toolkits/A_Guide_to_Developing_your_Agency's_Learning_Agenda.pdf" target="_blank">A Guide to Developing Your Agency’s Learning Agenda (1.72 MB)</a>
+            </li>
+            <li style="line-height: 25px;">
+              <a href="../assets/toolkits/Learning_Agenda_Workbook.docx" target="_blank">Learning Agenda Workbook (325 KB)</a>
             </li>
             <ul style="line-height: 25px;">
               <li style="line-height: 25px;">
-                <a href="../assets/toolkits/Activity_2_Supplement_FINAL.xlsx" target="_blank">Activity 2 Supplement</a>
+                <a href="../assets/toolkits/Activity_2_Supplement_FINAL.xlsx" target="_blank">Activity 2 Supplement (56.8 KB)</a>
               </li>
               <li style="line-height: 25px;">
-                <a href="../assets/toolkits/Activity_3_Supplement_FINAL.pptx" target="_blank">Activity 3 Supplement</a>
+                <a href="../assets/toolkits/Activity_3_Supplement_FINAL.pptx" target="_blank">Activity 3 Supplement (1.65 MB)</a>
               </li>
-            </ul>
+            </ul>            
             <li style="line-height: 25px;">
-              <a href="../assets/toolkits/Learning_Agenda_Overview.pdf" target="_blank">Overview of Learning Agendas</a>
-            </li>
-            <li style="line-height: 25px;">
-              <a href="../assets/toolkits/Sample_Learning_Agenda_Section.pdf" target="_blank">Learning Agenda Section Sample</a>
+              <a href="../assets/toolkits/Sample_Learning_Agenda_Section.pdf" target="_blank">Learning Agenda Section Sample (179 KB)</a>
             </li>
           </ul>
         </p>
       </div>
     </article>
     <article class="card-toolkit usa-width-one-third">
-      <div class="card-image" style="text-align: center; background-color: #7AC0D9;">
+      <div class="card-image" style="text-align: center; background-color: #2e9ac4;">
         <img src="../assets/toolkits/annual_eval_bg_hq_w.png" style="max-height: 200px;">
       </div>
       <div class="card-banner">
-        <h3 class="card-description" style="color: #7AC0D9; text-align: center;">
+        <h3 class="card-description" style="color: #2e9ac4; text-align: center;">
           <span>Annual Evaluation Plan Toolkit</span>
         </h3>
         <p class="card-summary">
           <ul style="line-height: 25px;">
             <li style="line-height: 25px;">
-              <a href="../assets/toolkits/A_Guide_to_Developing_your_Agency's_Annual_Evaluation_Plan.pdf" target="_blank">Guide to Developing Your Agency’s Annual Evaluation Plan</a>
-            </li>
-            <li style="line-height: 25px;">[Coming Soon] Evaluation Planning Tips</li>
-            <li style="line-height: 25px;">
-              <a href="../assets/toolkits/Annual_Evaluation_Plan_Workbook.docx" target="_blank">Annual Evaluation Plan Workbook</a>
+              <a href="../assets/toolkits/Annual_Evaluation_Plan_Overview.pdf" target="_blank">Annual Evaluation Plan Overview (107 KB)</a>
             </li>
             <li style="line-height: 25px;">
-              <a href="../assets/toolkits/Annual_Evaluation_Plan_Overview.pdf" target="_blank">Overview of Annual Evaluation Plans</a>
+              <a href="../assets/toolkits/A_Guide_to_Developing_your_Agency's_Annual_Evaluation_Plan.pdf" target="_blank">A Guide to Developing Your Agency’s Annual Evaluation Plan (938 KB)</a>
             </li>
+            {% comment %} <li style="line-height: 25px;">[Coming Soon] Evaluation Planning Tips</li> {% endcomment %}
             <li style="line-height: 25px;">
-              <a href="../assets/toolkits/Sample_Evaluation_Description.pdf" target="_blank">Sample Evaluation Summary</a>
+              <a href="../assets/toolkits/Annual_Evaluation_Plan_Workbook.docx" target="_blank">Annual Evaluation Plan Workbook (324 KB)</a>
+            </li>            
+            <li style="line-height: 25px;">
+              <a href="../assets/toolkits/Sample_Evaluation_Description.pdf" target="_blank">Sample Evaluation Description (238 KB)</a>
             </li>
           </ul>
         </p>
       </div>
     </article>
     <article class="card-toolkit usa-width-one-third">
-      <div class="card-image" style="text-align: center; background-color: #FC9A8F;">
+      <div class="card-image" style="text-align: center; background-color: #fa5546;">
         <img src="../assets/toolkits/coming_soon_bg_hq_w.png" style="max-height: 200px;">
       </div>
       <div class="card-banner">
-        <h3 class="card-description" style="color: #FC9A8F; text-align: center;">
+        <h3 class="card-description" style="color: #fa5546; text-align: center;">
           <span>[Coming Soon] Capacity Assesment Toolkit</span>
         </h3>
         <p class="card-summary">
           <ul style="line-height: 25px;">
-            <li style="line-height: 25px;">Capacity Assessment Tips</li>
             <li style="line-height: 25px;">Overview of Capacity Assessments</li>
+            <li style="line-height: 25px;">Capacity Assessment Tips</li>            
           </ul>
         </p>
       </div>
     </article>
   </div>
   <br />
-  <div class="usa-grid">
-    <div class="usa-width-one-fourth">
+  <div class="usa-width-one-whole">
+      <h2 style="text-align: center; margin-bottom: 10px; color: #005ea2;">Additional Toolkit Resources</h2>
+  </div>
+  <div class="usa-grid">    
+    <div class="usa-width-one-half">
       <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" href="../assets/toolkits/evidence_act_overview.pdf" target="_blank">
         <div>
           <div>
             <span class="download-button-icon"></span>
           </div>
           <div>
-            <span>Evidence Act Phase 1 Overview</span>
+            <span>Evidence Act Phase 1 Overview (100 KB)</span>
           </div>
         </div>
       </a>
     </div>
-    <div class="usa-width-one-fourth">
+    {% comment %} <div class="usa-width-one-fourth">
       <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" target="_blank">
         <div>
           <div>
@@ -134,15 +137,15 @@ layout: base
           </div>
         </div>
       </a>
-    </div>
-    <div class="usa-width-one-fourth">
+    </div> {% endcomment %}
+    <div class="usa-width-one-half">
       <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;"  href="../assets/toolkits/reference_sheet.pdf" target="_blank">
         <div>
           <div>
             <span class="download-button-icon"></span>
           </div>
           <div>
-            <span>Quick Reference Sheet</span>
+            <span>Quick Reference Sheet (106 KB)</span>
           </div>
         </div>
       </a>
