update text color

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -99,7 +99,7 @@ layout: base
   </div>
   <br />
   <div class="usa-width-one-whole">
-      <h2 style="text-align: center; margin-bottom: 10px; color: #005ea2;">Additional Toolkit Resources</h2>
+      <h2 style="text-align: center; margin-bottom: 10px; color: #2e9ac4;">Additional Toolkit Resources</h2>
   </div>
   <div class="usa-grid">    
     <div class="usa-width-one-half">
