updates to text

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -10,13 +10,13 @@ layout: base
 <section class="usa-section background-tint" style="padding-top: 2rem;">  
   <div class="usa-grid">
     <p class="billboard-message-toolkits" style="font-size: 42px;">
-      Resources to Help Federal Agencies Implement the Evidence Act
+      Resources to Help Federal Agencies Implement Title I of the Evidence Act
     </p>
     <p>
       The Foundations for Evidence-Based Policymaking Act of 2018 (“Evidence Act”) requires Federal agencies to undertake a number of activities to build and use evidence. These include establishing an Evaluation Officer (EO) position, developing a multi-year learning agenda and an Annual Evaluation Plan, and completing a capacity assessment. Implementation of the Evidence Act offers an opportunity to improve how agencies plan to build and use evidence, and can better align performance, budget, strategic planning, policymaking, data, and evidence-building activities across the Federal government.
     </p>
     <p>
-      OES has developed resources to support EOs and their staff as they engage stakeholders, help define priority questions, and plan evaluations and evidence-building activities. These toolkits on learning agendas, Annual Evaluation Plans and the capacity assessment, published in early 2020, are intended as resources to help agencies learn from leading practices and case studies to build a culture and infrastructure for continuous learning and improvement. We hope these publicly available materials will be helpful as EOs, their staff, and others across government complete this important work.
+      OES has developed resources to support EOs and their staff as they engage stakeholders, help define priority questions, and plan evaluations and evidence-building activities. These toolkits on learning agendas, Annual Evaluation Plans, and the capacity assessment, published in early 2020, are intended as resources to help agencies learn from leading practices and case studies to build a culture and infrastructure for continuous learning and improvement. We hope these publicly available materials will be helpful as EOs, their staff, and others across government complete this important work.
     </p>
     <br />
     <article class="card-toolkit usa-width-one-third">     
@@ -90,7 +90,7 @@ layout: base
         </h3>
         <p class="card-summary">
           <ul style="line-height: 25px;">
-            <li style="line-height: 25px;">Overview of Capacity Assessments</li>
+            <li style="line-height: 25px;">Capacity Assessment Overview</li>
             <li style="line-height: 25px;">Capacity Assessment Tips</li>            
           </ul>
         </p>
