minor text edit on document title

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -47,7 +47,7 @@ layout: base
               </li>
             </ul>            
             <li style="line-height: 25px;">
-              <a href="../assets/toolkits/Sample_Learning_Agenda_Section.pdf" target="_blank">Learning Agenda Section Sample (179 KB)</a>
+              <a href="../assets/toolkits/Sample_Learning_Agenda_Section.pdf" target="_blank">Sample Learning Agenda Section (179 KB)</a>
             </li>
           </ul>
         </p>
