--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -74,7 +74,9 @@ layout: base
             <li style="line-height: 25px;">
               <a href="../assets/toolkits/A_Guide_to_Developing_your_Agency's_Annual_Evaluation_Plan.pdf" target="_blank">A Guide to Developing Your Agency’s Annual Evaluation Plan (938 KB)</a>
             </li>
-            {% comment %} <li style="line-height: 25px;">[Coming Soon] Evaluation Planning Tips</li> {% endcomment %}
+            <li style="line-height: 25px;">
+              <a href="../assets/toolkits/evaluation_planning_tips.pdf" target="_blank">Evaluation Planning Tips (801 KB)</a>
+            </li>
             <li style="line-height: 25px;">
               <a href="../assets/toolkits/Annual_Evaluation_Plan_Workbook.docx" target="_blank">Annual Evaluation Plan Workbook (324 KB)</a>
             </li>            
