--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -93,7 +93,7 @@ layout: base
       </div>
       <div class="card-banner">
         <h3 class="card-description" style="color: #fa5546; text-align: center;">
-          <span>[Coming Soon] Capacity Assesment Toolkit</span>
+          <span>Capacity Assesment Toolkit</span>
         </h3>
         <p class="card-summary">
           <ul style="line-height: 25px;">
