--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -97,7 +97,7 @@ layout: base
         </h3>
         <p class="card-summary">
           <ul style="line-height: 25px;">
-            <li style="line-height: 25px;">Capacity Assessment Overview</li>
+            <li style="line-height: 25px;">
              <a href="../assets/toolkits/Capacity_Assessment_Overview.pdf" target="_blank"> Capacity Assessment Overview (324 KB)</a>
             </li>   
             <li style="line-height: 25px;">Capacity Assessment Tips</li>            
